tests/snapshots/run_wpt_conformance__onnx_lesser_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lesser.https.any.js",
    "lesser float32 1D constant tensors",
    "onnx",
    "PASS",
)
