tests/snapshots/run_wpt_conformance__onnx_lesser_float32_5D_inputs_with_alternating_broadcast_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lesser.https.any.js",
    "lesser float32 5D inputs with alternating broadcast axes",
    "onnx",
    "PASS",
)
